--- a/backend/Backend/Backend.csproj
+++ b/backend/Backend/Backend.csproj
@@ -4,10 +4,18 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>backend</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\Models\**\*.cs" />
+    <Compile Include="..\Services\**\*.cs" />
+    <Compile Include="..\Controllers\**\*.cs" />
   </ItemGroup>
 
 </Project>
